# wallet_service

./: .env  Cargo.toml  Dockerfile  README.MD  docker-compose.yml
migrations/: 202509130001_create_wallets.sql  202509130002_create_transfers.sql  202509130003_seed_wallets.sql
src/: main.rs
src/application/: get_balance.rs  get_transfer_history.rs  mod.rs  transfer_funds.rs
src/domain/: mod.rs  transfer.rs  wallet.rs
src/infrastructure/: database.rs  message_queue.rs  mod.rs
src/interfaces/: mod.rs
src/interfaces/http/: handlers.rs
src/interfaces/messaging/: mod.rs  rabbitmq.rs
src/interfaces/repository/: mod.rs  postgres.rs
src/tests/: unit.rs
