[package]
name = "wallet_service"
version = "0.1.0"
edition = "2021"


[dependencies]

axum = "0.6.20"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.6", features = ["runtime-tokio-native-tls", "postgres", "chrono", "migrate"] }
lapin = "2.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
log = "0.4"
env_logger = "0.10"
futures-util = "0.3.31"


[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["test-util"] }